force-app/main/default/objects/Room__c/fields/Alcohol__c.field-meta.xml
<CustomField>
    <fullName>Alcohol__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alcohol</label>
    <type>Checkbox</type>
</CustomField>