force-app/main/default/objects/Room__c/fields/IsBooked__c.field-meta.xml
<CustomField>
    <fullName>IsBooked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBooked</label>
    <type>Checkbox</type>
</CustomField>