force-app/main/default/objects/Room__c/fields/IsBusy__c.field-meta.xml
<CustomField>
    <fullName>IsBusy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBusy</label>
    <type>Checkbox</type>
</CustomField>