force-app/main/default/objects/Room__c/fields/KindOfRoom__c.field-meta.xml
<CustomField>
    <fullName>KindOfRoom__c</fullName>
    <label>KindOfRoom</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>single room</fullName>
            </value>
            <value>
                <fullName>double room</fullName>
            </value>
            <value>
                <fullName>triple room</fullName>
            </value>
            <value>
                <fullName>quadruple room</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>