force-app/main/default/objects/Room__c/fields/Sauna__c.field-meta.xml
<CustomField>
    <fullName>Sauna__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sauna</label>
    <type>Checkbox</type>
</CustomField>