force-app/main/default/objects/Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Hotel__c</columns>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Alcohol__c</columns>
    <columns>Internet__c</columns>
    <columns>Sauna__c</columns>
    <columns>KindOfRoom__c</columns>
    <columns>IsBooked__c</columns>
    <columns>IsBusy__c</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>